<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/register"
        android:textColor="@color/blue_style"
        android:textSize="38sp" />

    <RelativeLayout
        style="@style/layout_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" >

        <TextView
            android:id="@+id/textview_1"
            style="@style/textControl"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/register_name" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textview_1"
            android:layout_toRightOf="@id/textview_1"
            android:hint="@string/register_username_hint" />

        <TextView
            android:id="@+id/textview_2"
            style="@style/textControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/textview_1"
            android:layout_below="@id/textview_1"
            android:layout_marginTop="40dp"
            android:text="@string/register_passwd" />

        <EditText
            android:id="@+id/passwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textview_2"
            android:layout_alignLeft="@id/username"
            android:hint="@string/register_passwd_hint"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textview_3"
            style="@style/textControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/textview_1"
            android:layout_below="@id/textview_2"
            android:layout_marginTop="40dp"
            android:text="@string/register_repasswd" />

        <EditText
            android:id="@+id/repasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/textview_3"
            android:layout_alignLeft="@id/username"
            android:hint="@string/register_repasswd_hint"
            android:inputType="textPassword" />
    </RelativeLayout>

    <Button
        android:id="@+id/register_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/postitem_sendbutton"
        android:gravity="center"
        android:text="@string/register_ok"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

</LinearLayout>