<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/user_profile_fragment"
     >

    <!-- android:baselineAligned="false"     这个属性设置很重要  不然一直对不齐 -->

    <LinearLayout
        style="@style/layout_margin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/user_profile_textview_left"
            style="@style/user_profile_1"
            android:layout_marginRight="1dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/beforelogin"
            android:textSize="18sp" />

        <Button
            android:id="@+id/user_profile_login_right"
            style="@style/user_profile_1"
            android:layout_marginLeft="1dp"
            android:layout_weight="1"
            android:clickable="true"
            android:drawableLeft="@drawable/user_profile_userpoto"
            android:text="@string/login" 
            android:background="@drawable/user_profile_login_right"
            />
    </LinearLayout>

    <!-- 发布新帖   我的收藏  我的订阅 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/user_profile_post"
            style="@style/user_profile_2"
            android:layout_gravity="left"
            android:layout_marginRight="3dp"
            android:contentDescription="@string/postitem"
            android:src="@drawable/user_profile_postitem" />

        <ImageButton
            android:id="@+id/user_profile_collection"
            style="@style/user_profile_2"
            android:layout_marginRight="3dp"
            android:contentDescription="@string/collection"
            android:src="@drawable/user_profile_collection" />

        <ImageButton
            android:id="@+id/user_profile_subscribe"
            style="@style/user_profile_2"
            android:layout_gravity="right"
            android:contentDescription="@string/subscribe"
            android:src="@drawable/user_profile_subscribe" />
    </LinearLayout>

    <!-- user_profile  其他listview信息 -->

    <ListView
        android:id="@+id/user_profile_listview"
        style="@style/layout_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >
    </ListView>

</LinearLayout>